test/error/ast/NotIntSetElem.mod
MODULE NotIntSetElem;
VAR s: SET;
BEGIN
  s := {1, 2.5};
END NotIntSetElem.
